# template-python

./: .cursorrules  .env.development.template  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  FIRST_CONTRIBUTION.md  ONBOARDING.md  PYTHON3_ENGINEERING_PLAN.md  README.md  alembic.ini  docker-compose.local.yml  pyproject.toml
.github/: copilot-instructions.md  pull_request_template.md
.github/workflows/: ci.yml
configs/vscode/: extensions.json  launch.json  settings.json
migrations/: env.py
scripts/: init.ps1  init.sh  verify-connection.ps1  verify-connection.sh
src/app/: cli.py  config.py  logger.py  main.py
src/app/application/: unit_of_work.py
src/app/application/commands/: example_commands.py
src/app/application/dtos/: example_dtos.py
src/app/application/example/: __init__.py
src/app/application/example/commands/: __init__.py  example_commands.py
src/app/application/example/dtos/: __init__.py  example_dtos.py
src/app/application/example/queries/: __init__.py  example_queries.py
src/app/application/queries/: example_queries.py
src/app/application/use_cases/: example_use_cases.py
src/app/domain/entities/: example.py
src/app/domain/example/: __init__.py
src/app/domain/exceptions/: example_exceptions.py
src/app/domain/repositories/: example_repository.py
src/app/domain/services/: example_service.py
src/app/domain/shared/: __init__.py  entity.py  event.py
src/app/domain/value_objects/: name.py
src/app/infrastructure/config/: __init__.py  settings.py
src/app/infrastructure/database/: core.py
src/app/infrastructure/external_services/: redis_service.py
src/app/infrastructure/logging/: __init__.py  config.py
src/app/interface/cli/: __init__.py  main.py
tests/: test_example.py  test_health.py
(+25 files in other folders)
