[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "app"
version = "0.1.0"
description = "Python3 DDD FastAPI project template"
requires-python = ">=3.12"
authors = [
    { name = "Dev Team", email = "dev@example.com" }
]
license = "MIT"
keywords = ["fastapi", "python", "ddd"]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "structlog>=24.0.0",
    "redis>=5.0.0",
    "httpx>=0.27.0",
    "httpx2>=0.27.0",
    "psycopg[binary]>=3.1.0",
    "alembic>=1.13.0",
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-instrumentation>=0.48b0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-semantic-conventions>=0.48b0",
]

[project.scripts]
app = "app.cli:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "basedpyright",
    "pre-commit",
    "fastapi[all]",
    "aiosqlite",
]

[tool.uv]
link-mode = "copy"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
line-ending = "lf"

[tool.ruff.lint]
select = ["E", "W", "F", "B", "I"]
ignore = ["E501"]
fixable = ["E", "W", "F", "B", "I"]
unfixable = []

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/app --cov-fail-under=80 --cov-report=term-missing"
asyncio_mode = "auto"

[tool.basedpyright]
typeCheckingMode = "strict"
pythonVersion = "3.12"
reportMissingImports = true
reportMissingTypeStubs = true
reportUnknownMemberType = true
reportUnknownVariableType = true